# hoba

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  compose.shared.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_rooms.py  0003_spin_policy_default_anyone.py  0004_add_current_turn_user_id.py  0005_add_segment_eliminated_at.py  0006_add_punishment_room_columns.py  0007_add_spin_count.py  0008_add_best_of_n_round_state.py  0009_add_bon_round_start_spin_id.py  0010_punishment_prediction_state.py  0011_punishment_match_race.py  0012_punishment_v4.py  0013_rigged_revealed.py  0014_rigged_spin_count.py  0015_wheels.py  0016_public_wheels.py  0017_fix_wheel_timestamps.py  0018_join_approval.py  0019_user_music_enabled.py  0020_punishment_wild_spins.py
apps/api/src/hoba_api/: __init__.py  anon.py  bot.py  config.py  db.py  main.py  redis_client.py  sanitize.py
apps/api/src/hoba_api/api/: __init__.py
apps/api/src/hoba_api/api/v1/: __init__.py  me.py  moderation.py  rooms.py  router.py  templates.py  trending.py  wheels.py
apps/api/src/hoba_api/auth/: __init__.py  dependencies.py  initdata.py
apps/api/src/hoba_api/models/: __init__.py  _base.py  participant.py  question.py  room.py  segment.py  spin.py  user.py  wheel.py  wheel_social.py
apps/api/src/hoba_api/moderation/: __init__.py  profanity.py
apps/api/src/hoba_api/modes/: __init__.py  base.py  chaos.py  classic.py  elimination.py  punishment.py  punishment_decks.py  registry.py
apps/api/src/hoba_api/realtime/: __init__.py  handlers.py  server.py
apps/api/src/hoba_api/schemas/: __init__.py  room.py  template.py  user.py  wheel.py
apps/api/src/hoba_api/services/: __init__.py  participants.py  punishment.py  rigged.py  room_state.py  rooms.py  spins.py  templates.py  users.py  wheels.py
apps/api/src/hoba_api/tasks/: __init__.py  cleanup.py
apps/api/src/hoba_api/templates/: __init__.py  catalog.py
apps/api/src/hoba_api/wheel/: __init__.py  spin_math.py
apps/api/tests/: conftest.py  test_sanitize.py  test_smoke.py
apps/api/tests/api/: test_fuzz.py  test_me.py  test_moderation.py  test_rooms.py  test_wheels.py
apps/api/tests/auth/: test_initdata.py
apps/api/tests/modes/: test_engines.py  test_punishment_decks.py  test_punishment_engine.py  test_registry.py
apps/api/tests/realtime/: test_handlers.py
apps/api/tests/services/: test_cooldown.py  test_moderation.py  test_participants.py  test_punishment.py  test_rigged.py  test_room_state.py  test_rooms.py  test_spins.py  test_templates.py  test_turn_advance.py  test_user_cache.py  test_users.py  test_wheel_social.py  test_wheels.py
apps/api/tests/tasks/: test_cleanup.py
apps/api/tests/wheel/: test_spin_math.py
apps/bot/: Dockerfile  pyproject.toml
apps/bot/src/hoba_bot/: __init__.py  __main__.py  config.py  handlers.py  main.py  middleware.py
apps/bot/tests/: conftest.py  test_handlers.py  test_main.py  test_middleware.py  test_smoke.py
apps/webapp/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/webapp/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
apps/webapp/src/audio/: chaosTones.ts  index.ts  manifest.ts
apps/webapp/src/components/: AppErrorBoundary.tsx  CrashScreen.tsx
apps/webapp/src/components/ds/: AuroraBackground.tsx  Avatar.tsx  AvatarStack.tsx  Button.tsx  Card.tsx  ConfettiBurst.tsx  EmptyState.tsx  HobaWord.tsx  IconButton.tsx  Input.tsx  Modal.tsx  QuickWheelCard.tsx  RealtimeIndicator.tsx  ResultBanner.tsx  RoomCodePill.tsx  SegmentChip.tsx  Sheet.tsx  Skeleton.tsx  Toast.tsx  icons.tsx
apps/webapp/src/components/layout/: RootLayout.tsx  StubPage.tsx
apps/webapp/src/components/room/: FlyingReactions.tsx  GameModeBadge.tsx  InviteSheet.tsx  ReactionsBar.tsx  RigEditorSheet.tsx  RoomModePickerSheet.tsx  RoomSettingsSheet.tsx  WinnerOverlay.tsx
apps/webapp/src/components/trending/: PublicWheelCard.tsx
apps/webapp/src/data/: gameModes.ts  quickWheels.ts
apps/webapp/src/data/__tests__/: gameModes.test.ts
apps/webapp/src/features/rooms/: bestOfN.ts  chaos.ts  elimination.ts  permissions.ts  punishment.ts  reactionLanes.ts  turnState.ts
apps/webapp/src/features/wheel/: Wheel.tsx  emoji.ts  hubLogic.ts  seededRandom.ts  spinMath.ts  spinSeries.ts  (+1 more)
apps/webapp/src/i18n/: index.ts
apps/webapp/src/lib/: api.ts  cn.ts  haptics.ts  navigation.ts  safeStorage.ts  startParam.ts  telegram.ts
apps/webapp/src/pages/: AdminModerationPage.tsx  CreatePage.tsx  CreditsPage.tsx  DevDSPage.tsx  HomePage.tsx  LegalPage.tsx  LibraryPage.tsx  RoomPage.tsx  SettingsPage.tsx  SpinPage.tsx  TrendingPage.tsx
apps/webapp/src/providers/: ThemeProvider.tsx
apps/webapp/src/stores/: room.ts  settings.ts  spinHistory.ts  toast.ts
design-system/hoba/: MASTER.md
docs/: TODO.md  architecture.md  audio-licenses.md  botfather-setup.md  changelog.md  cleanup-2026-05-28-findings.md  deployment.md  development.md  game-modes.md  manual-verify-stageA.md  manual-verify-stageB.md  privacy.md  roadmap.md  soft-launch-invite.md  spec.md  testing.md  validation-notes.md
docs/redesign/: DISCOVERY.md  PERF_AUDIT.md
docs/superpowers/plans/: 2026-05-28-cleanup-pass.md  2026-05-28-turn-based-mode-defaults.md  2026-05-29-best-of-n.md  2026-05-29-elimination-mode.md  2026-05-29-mode-picker-ui.md  2026-05-29-punishment-mode.md  2026-05-30-punishment-prediction-wager.md
docs/superpowers/specs/: 2026-05-28-cleanup-pass-design.md  2026-05-28-turn-based-mode-defaults-design.md  2026-05-29-best-of-n-attempts-design.md  2026-05-29-best-of-n-design.md  2026-05-29-elimination-mode-design.md  2026-05-29-mode-picker-ui-design.md  2026-05-29-punishment-mode-design.md  2026-05-30-punishment-prediction-wager-design.md
infra/caddy/: Caddyfile
infra/nginx/: hoba.conf
scripts/: deploy.sh  generate_sounds.py  i18n-check.mjs  visitors.py
(+35 files in other folders)
