[project]
name = "hoba-api"
version = "0.1.0"
description = "Hoba! API — FastAPI + Socket.IO backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "redis>=5.0",
    "python-socketio>=5.11",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoba_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["hoba_api"]

[[tool.mypy.overrides]]
module = ["socketio.*", "engineio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hoba_api.realtime.handlers"
disable_error_code = ["untyped-decorator", "import-untyped"]

[[tool.mypy.overrides]]
module = ["hoba_api.realtime.server", "hoba_api.main"]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=hoba_api --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/hoba_api"]
omit = [
    "src/hoba_api/main.py",
    # Socket.IO handlers + Redis client are exercised by manual
    # two-device tests + integration smoke (Phase 11 polish adds an
    # async-IO test harness). Service layer is 90%+ covered.
    "src/hoba_api/realtime/*",
    "src/hoba_api/redis_client.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
