[project]
name = "hoba-bot"
version = "0.1.0"
description = "Hoba! Telegram bot — aiogram polling"
requires-python = ">=3.12"
# `hoba-api` is an implicit sibling dep — installed alongside in the
# monorepo (Dockerfile installs it first; CI does too). Not declared as
# a pip dependency because it is not on any registry.
dependencies = [
    "aiogram>=3.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hoba_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["hoba_api", "hoba_bot"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["hoba_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=hoba_bot --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/hoba_bot"]
omit = [
    "src/hoba_bot/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
